--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "passport" : "~0.4.1",
     "express-session" : "~1.17.2",
     "passport-local" : "~1.0.0",
-    "bcrypt" : "~5.0.0"
+    "bcrypt" : "~5.0.0",
+    "body-parser" : "~1.19.0"
   },
   "repository": {
     "type": "git",
