--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-session" : "~1.17.2",
     "passport-local" : "~1.0.0",
     "bcrypt" : "~5.0.0",
-    "body-parser" : "~1.19.0"
+    "body-parser" : "~1.19.0",
+    "passport-github" : "~1.1.0"
   },
   "repository": {
     "type": "git",
