--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "~5.0.0",
+    "body-parser": "~1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.1",
+    "express-session": "~1.17.2",
     "mongodb": "^3.6.1",
     "node": "12.18.0",
-    "pug" : "~3.0.2",
-    "passport" : "~0.4.1",
-    "express-session" : "~1.17.2",
-    "passport-local" : "~1.0.0",
-    "bcrypt" : "~5.0.0",
-    "body-parser" : "~1.19.0",
-    "passport-github" : "~1.1.0"
+    "passport": "~0.4.1",
+    "passport-github": "~1.1.0",
+    "passport-local": "~1.0.0",
+    "pug": "~3.0.2",
+    "socket.io": "^2.4.1"
   },
   "repository": {
     "type": "git",
