--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "passport-github": "~1.1.0",
     "passport-local": "~1.0.0",
     "pug": "~3.0.2",
-    "socket.io": "^2.4.1"
+    "socket.io": "^2.4.1",
+    "passport.socketio": "3.7.0",
+    "connect-mongo": "~3.2.0",
+    "cookie-parser": "~1.4.5"
   },
   "repository": {
     "type": "git",
